--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <img src="./menu-item.jpeg" alt="menu item" class="photo" />
           <div class="item-info">
             <header>
-              <h4>buttermilk pancakes</h4>
+              <h4>natura</h4>
               <h4 class="price">$15</h4>
             </header>
             <p class="item-text">
@@ -51,7 +51,7 @@
           <img src="./menu-item.jpeg" alt="menu item" class="photo" />
           <div class="item-info">
             <header>
-              <h4>buttermilk pancakes</h4>
+              <h4>natura</h4>
               <h4 class="price">$15</h4>
             </header>
             <p class="item-text">
@@ -65,7 +65,7 @@
           <img src="./menu-item.jpeg" alt="menu item" class="photo" />
           <div class="item-info">
             <header>
-              <h4>buttermilk pancakes</h4>
+              <h4>natura</h4>
               <h4 class="price">$15</h4>
             </header>
             <p class="item-text">
