--- a/index.html
+++ b/index.html
@@ -3,77 +3,77 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Menu</title>
+    <title>Catalogo de produtos</title>
     <!-- font-awesome -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
     />
-    <!-- styles -->
+    <!-- estilos -->
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <section class="menu">
-      <!-- title -->
+      <!-- titulo -->
       <div class="title">
         <h2> Produtos Disponíveis</h2>
         <div class="underline"></div>
       </div>
-      <!-- filter buttons -->
+      <!-- filtro de botões -->
       <div class="btn-container">
         <!-- <button type="button" class="filter-btn" data-id="all">all</button>
         <button type="button" class="filter-btn" data-id="breakfast">
-          breakfast
+          Teste
         </button>
-        <button type="button" class="filter-btn" data-id="lunch">lunch</button>
+        <button type="button" class="filter-btn" data-id="lunch">teste</button>
         <button type="button" class="filter-btn" data-id="shakes">
-          shakes
+          Teste
         </button> -->
       </div>
-      <!-- menu items -->
+      <!-- menu de itens -->
       <div class="section-center">
-        <!-- single item -->
+        <!-- item unico -->
         <article class="menu-item">
           <img src="./menu-item.jpeg" alt="menu item" class="photo" />
-          <div class="item-info">
+          <div class="item-info" >
             <header>
               <h4>natura</h4>
-              <h4 class="price">$15</h4>
+              <h4 class="price">R$15</h4>
             </header>
             <p class="item-text">
               ok.
             </p>
           </div>
         </article>
-        <!-- end of single item -->
-        <!-- single item -->
+        <!-- fim do item unico  -->
+        <!--item unico  -->
         <article class="menu-item">
           <img src="./menu-item.jpeg" alt="menu item" class="photo" />
           <div class="item-info">
             <header>
               <h4>natura</h4>
-              <h4 class="price">$15</h4>
+              <h4 class="price">R$15</h4>
             </header>
             <p class="item-text">
               ok.
             </p>
           </div>
         </article>
-        <!-- end of single item -->
-        <!-- single item -->
+        <!-- fim do item unico  -->
+        <!--item unico  -->
         <article class="menu-item">
           <img src="./menu-item.jpeg" alt="menu item" class="photo" />
           <div class="item-info">
             <header>
               <h4>natura</h4>
-              <h4 class="price">$15</h4>
+              <h4 class="price">R$15</h4>
             </header>
             <p class="item-text">
               ok.
             </p>
           </div>
         </article>
-        <!-- end of single item -->
+        <!-- fim do item unico  -->
       </div>
     </section>
     <!-- javascript -->
